# facefiltering

./: .gitignore
FaceFiltering/: README.md  app.py  main.py  requirements.txt  setup_and_run_ui.py  xotiena00.tex
FaceFiltering/cpp/: CMakeLists.txt  README.md  main.cpp
FaceFiltering/facefiltering/: __init__.py  gray.py  ops.py  registry.py  validate.py
FaceFiltering/facefiltering/filters/: __init__.py  aura_glow.py  background_removal.py  bilateral.py  binary_threshold.py  bloom.py  canny.py  crosshatch_threshold.py  diffuse.py  dilate.py  dodge.py  erode.py  fresnel_glow.py  gamma.py  gaussian_blur.py  highpass_fourier.py  histogram_eq.py  hue_rotate.py  laplacian.py  lens_distortion.py  median.py  orton_effect.py  posterize.py  relief_emboss.py  sobel.py  swirl.py  unsharp.py  vignette.py  wiener.py  zoom.py
FaceFiltering/report/: adar_report.tex  xotiena00.tex
report/: report.tex
solution/: mt01  mt02  mt03  mt04  mt05
tasks/: mt01.cpp  mt02.cpp  mt03.cpp  mt04.cpp  mt05.cpp
